Refactor to inject node client for extending plugins.
Signed-off-by: Finn Carroll <carrofin@amazon.com>