@@ -16,10 +16,12 @@ import io.grpc.health.v1.HealthCheckResponse;
 import io.grpc.protobuf.lite.ProtoLiteUtils;
 import io.grpc.reflection.v1alpha.ServiceResponse;
 import io.grpc.stub.ServerCalls;
+import org.opensearch.Version;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.plugins.PluginInfo;
 import org.opensearch.test.NodeConfigurationSource;
+import org.opensearch.transport.client.Client;
 import org.opensearch.transport.grpc.ssl.NettyGrpcClient;
 
 import java.nio.file.Path;
@@ -51,53 +53,50 @@ public class LoadExtendingPluginServicesIT extends GrpcTransportBaseIT {
         }
     }
 
-    public static final class MockExtendingPlugin extends Plugin {
-
-        public static class MockServiceProvider implements GrpcPlugin.GrpcServiceProvider {
-            @Override
-            public BindableService get() {
-                return new MockEchoService();
-            }
+    public static final class MockExtendingPlugin extends Plugin implements GrpcServiceFactory {
+        @Override
+        public GrpcServiceFactory initClient(Client client) {
+            return this;
         }
 
+        @Override
+        public BindableService build() {
+            return new MockEchoService();
+        }
     }
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return List.of(GrpcPlugin.class, MockExtendingPlugin.class);
+        return Collections.emptyList();
     }
 
-//    @Override
-//    protected NodeConfigurationSource getNodeConfigSource() {
-//        return new NodeConfigurationSource() {
-//            @Override
-//            public Settings nodeSettings(int nodeOrdinal) {
-//                return Settings.EMPTY;
-//            }
-//
-//            @Override
-//            public Path nodeConfigPath(int nodeOrdinal) {
-//                return null;
-//            }
-//
-//            @Override
-//            public Collection<PluginInfo> additionalNodePlugins() {
-//                // Return proper PluginInfo for MockExtendingPlugin with extended plugins declared
-//                return List.of(
-//                    new PluginInfo(
-//                        "mock-extending-plugin",
-//                        "Mock plugin that extends transport-grpc for testing",
-//                        "1.0.0",
-//                        org.opensearch.Version.CURRENT,
-//                        "21",
-//                        "org.opensearch.transport.grpc.LoadExtendingPluginServicesIT$MockExtendingPlugin",
-//                        List.of("transport-grpc"),
-//                        false
-//                    )
-//                );
-//            }
-//        };
-//    }
+    @Override
+    protected Collection<PluginInfo> additionalNodePlugins() {
+        return List.of(
+            new PluginInfo(
+                GrpcPlugin.class.getName(),
+                "classpath plugin",
+                "NA",
+                Version.CURRENT,
+                "21",
+                GrpcPlugin.class.getName(),
+                null,
+                Collections.emptyList(),
+                false
+            ),
+            new PluginInfo(
+                MockExtendingPlugin.class.getName(),
+                "classpath plugin",
+                "NA",
+                Version.CURRENT,
+                "21",
+                MockExtendingPlugin.class.getName(),
+                null,
+                List.of(GrpcPlugin.class.getName()),
+                false
+            )
+        );
+    }
 
     public void testListInjectedService() throws Exception {
         System.out.println("PRINTING DISCOVERED SERVICES: ");
